# LyricalDave

./: .gitignore  LICENSE  README.md  monitor.sh  nohup_loglife.sh  nohup_safetyShutdown.sh  nohup_wheellog.sh  odostats.sh  print_daveData.sh  reboot.sh  shutdown.sh
Graphics/: README.md
config/: 99-vcio.rules  Setup_ROS2_Lyrical.sh  Setup_Ubuntu_26.04.md  config.txt  crontab-e  etc_systemd_system.ip_feedback.service  install_99-vcio.rules  install_ina219.sh  install_ip_feedback_service.sh  install_snes_config.sh  install_transforms3d.sh  ip_feedback.sh  new_gopigo3_install.sh  set_gpg3_config.py  setup_ros2_lyrical.out  tilde_dot_asoundrc  tilde_dot_bashrc  tilde_go.sh  transforms3D_numpy.md
plib/: battery.py  cleanlifelog.py  daveDataJson.py  di_i2c.py  leds.py  lifeLog.py  loglife.py  piper.sh  rosbotDataJson.py  runLog.py  safetyShutdown.py  speak.py  wheellog.py  write_gpg3_config_json.py
ros2ws/: README.md  check_battery.sh  clean.sh  create_node_in_pkg.sh  rebuild.sh  ss.sh  start_LyricalDave.sh  start_wo_Dave.sh  status.sh  stop_robot.sh  tl.sh  versions.sh  watch_load_and_cpu.sh
ros2ws/cmds/: bt_hello_dave_activate.sh  bt_hello_dave_blackboard_state.sh  bt_hello_dave_clear_mute.sh  bt_hello_dave_reload_grammar.sh  bt_hello_dave_shutdown.sh  bt_reload_grammar.sh  call_dock.sh  call_drive_distance.sh  call_fixdock.sh  call_get_dave_node_state.sh  call_odom_reset_srv.sh  call_say_svc.sh  call_start_scan.sh  call_stop_scan.sh  call_undock.sh  confirm_nav2_params_file_in_use.sh  echo_battery_state.sh  echo_cmd_vel_topics.sh  echo_dock_status.sh  echo_encoder_topics.sh  echo_imu_topics.sh  echo_joy_topic.sh  echo_lidar_topic.sh  echo_map_topic.sh  echo_motor_status_topic.sh  echo_mpu9250_imu_topics.sh  echo_pose.sh  kill_camera.sh  kill_joy.sh  kill_lidar.sh  kill_stt.sh  launch_camera.sh  launch_map_server.sh  launch_pointcloud.sh  launch_rtabmap.sh  (+43 more)
ros2ws/src/bt_hello_dave/: CMakeLists.txt  README.md
ros2ws/src/bt_hello_dave/config/: bt_hello_dave_grammar.yaml
ros2ws/src/bt_hello_dave/include/bt_hello_dave/: battery_state_subscriber_node.hpp  dispatch_nodes.hpp  grammar_store.hpp  hello_dave_lifecycle_node.hpp  say_service_node.hpp  set_grammar_node.hpp  stt_queue_nodes.hpp  stt_result_subscriber_node.hpp  types.hpp
ros2ws/src/bt_hello_dave/launch/: bt_hello_dave.launch.yaml
ros2ws/src/bt_hello_dave/scripts/: bt_hello_dave_launch.sh  bt_hello_dave_shutdown.sh  compile_debug_bt_hello_dave.sh  gdb_bt_hello_dave.sh
ros2ws/src/bt_hello_dave/src/: battery_state_subscriber_node.cpp  delay_seconds_node.cpp  dispatch_nodes.cpp  hello_dave_lifecycle_node.cpp  match_grammar_node.cpp  register_nodes.cpp  say_service_node.cpp  set_grammar_node.cpp  stt_queue_nodes.cpp  stt_result_subscriber_node.cpp
saved/: 2026-06-02_daveData.json  2026-06-03_daveData.json  2026-06-03_dot_gpg3_config.json  2026-06-03_totallife.txt
utils/: count_lines.sh  logMaintenance.py  odostats.sh  print_daveDataJson.py  save_logs.sh  save_totallife.sh  totalTravel.sh  totallife.sh  wheelstats.sh
(+464 files in other folders)
